[gd_scene load_steps=6 format=3 uid="uid://du2g40h3dxlsm"]

[ext_resource type="Script" uid="uid://cexjjettd1lwn" path="res://scripts/ui/components/AchievementItem.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://dc44o3ilk6crs" path="res://assets/fonts/BrokenConsoleBold.ttf" id="2_bp0ub"]
[ext_resource type="Texture2D" uid="uid://d2d2fqijs2wp6" path="res://assets/art/vfx/diamond.png" id="2_s7wj0"]
[ext_resource type="Texture2D" uid="uid://c2hkxa734txio" path="res://assets/art/vfx/lock.png" id="3_yfk7a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_achievement_item"]
bg_color = Color(0.0784314, 0.0784314, 0.0980392, 0.670588)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.498039, 0, 0.498039, 0.498039)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="AchievementItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
offset_right = 380.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_achievement_item")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AchievementIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_s7wj0")
expand_mode = 1
stretch_mode = 4

[node name="LockIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_yfk7a")
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_bp0ub")
theme_override_font_sizes/font_size = 18
text = "Achievement Title"
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_bp0ub")
theme_override_font_sizes/font_size = 14
text = "Achievement description goes here"
autowrap_mode = 3

[node name="DateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_bp0ub")
theme_override_font_sizes/font_size = 12
text = "Unlocked: 2023-11-12"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
